# calculator-mcp

./: .gitignore  README.md  main.py  pyproject.toml
src/calculator_mcp/: __init__.py  advanced_math.py  calculator_mcp.py
src/math_mcp/: __init__.py  advanced_math.py  server.py
test/: test_calculator.py  test_expression_evaluator.py
