[project]
name = "calculator-mcp"
version = "0.1.0"
description = "Calculator MCP server to compute mathematical operations"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"

keywords=["math", "calculator", "mcp"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "mcp[cli]>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
calculator-mcp = "calculator_mcp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 100
